# drift.ai

./: .dockerignore  .gitignore  .vercelignore  IMPLEMENTATION.md  README.md  docker-compose.yml  drift_ai.pptx  drift_prd.md  package-lock.json  package.json  requirements.txt  vercel.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: main.py  schemas.py
apps/api/app/core/: settings.py
apps/api/app/routes/: audit.py  evidence.py  insights.py  plaid.py  settings.py
apps/api/app/services/: plaid.py  synthetic_data.py
apps/api/tests/: test_api.py  test_plaid_service.py  test_routes.py
apps/mobile/: Dockerfile  README.md  app.json  package.json  tsconfig.json
apps/mobile/app/: index.tsx
apps/mobile/lib/: mobile-scan.ts  slm-runtime.ts
apps/mobile/tests/: slm-runtime.test.ts
apps/web/: Dockerfile  MANUAL_TEST_PLAN.md  README.md  next.config.ts  package.json  playwright.config.ts  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: account-gate.tsx  account-profile-bootstrap.tsx  account-sync-card.tsx  app-shell.tsx  audit-ui.tsx  audit-workspace.tsx  auth-action-link.tsx  drift-dashboard.tsx  lead-capture.tsx  logout-local-clear.tsx  markdown-block.tsx  payment-button.tsx  premium-feature-gate.tsx  report-section-lock.tsx  theme-provider.tsx
apps/web/e2e/: csv-import.spec.ts
apps/web/lib/: account-bootstrap.ts  account-status-cache.ts  account-sync.ts  ai-behavior-insights.ts  audit-persistence.ts  auth-navigation.ts  auth0.ts  behavior-insights.ts  cash-flow.ts  (+20 more)
supabase/: schema.sql
(+59 files in other folders)
